css/layout.css
.logos{
    margin-left: 90%;
    font-size: 50px;
    position: fixed;
}

.sidebar{
    width: 90px;
    background-color:black;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    overflow: auto;
}
.sidebar a{
    display: block;
    text-align: center;
    padding: 50%;
    padding-left: 0%;
    transition: all 0.3s ease;
    font-size: 50px;
    color: white;
}

.sidebar p{
    color: white;
}
.sidebar a:hover{

    background-color:beige;
}

.home{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: 100vh;
    color: white;
    font-size: large;
}
.aboutme{
    display: flex;
    flex-direction: row;
    /* align-items: center; */
    text-align: center;
    width: 100%;
    height: 100vh;
    color: white;
    font-size: large;
    padding-bottom: 10%;
}
.aboutme_text{
    padding: 8%;
}
.aboutme p{
    font-size: xx-large;
}
.image{
    padding-top: 10%;
}

.project{
    width: 90%;
    height: 100vh;
    color: white;
    font-size: large;
    display: grid;
    grid-template-columns: repeat(2, 5fr);
}
.container > div{
    background-size: cover;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   transition: all 0.3s ease-in;
   padding-bottom: 2px;
}

.container > div:hover{
    transform: scale(0.85);
}


.contact{
    width: 100%;
    height: 100vh;
    color: white;
    font-size: x-large;
}
.contact_message{
    margin-left: 15%;
    padding-top: 5%;
}
.contact_logo{
  padding-left: 15%;
  padding-top: 2px;
}
input[type=text], select, textarea {
    
    width: 70%;
    border-radius: 4px;
    margin-top: 8px;
    margin-left: 10%;
}
input[type = submit]:hover{
    background-color: white;
}
.contacts_info {
    display: flex;
    padding-left: 10rem;
    height: 50%;
}
.info{
    padding-top: 10px;
}
.form {
    margin-left: 5%;
    width: 40%;
    height: 100%;
    text-align: center;
}

input[type=text], select, textarea {
    color: white;
    width: 100%;
    padding: 15px;
    border: 3px solid white;
    border-radius: 4px;
    resize: vertical;
}
.footer{

    background-color: blue;
    color: aqua;
    padding: 50%;
}

